Replace List.getFirst/getLast which are added in API 35 with get()
Test: ./gradlew :pdf:integration-tests:testapp:assemble.
Change-Id: I2884242c404c873f39be1e65b48111e833bd63c0